--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "framer-motion": "^12.23.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1"
-    "vite-plugin-compression": "^0.x.x"
+    "react-router-dom": "^7.7.1",
+    "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
